* MuscleSystem: added custom brush colors.

--- a/Apps/Sample/Rigging/MuscleSimulation/BasicMuscle.html
+++ b/Apps/Sample/Rigging/MuscleSimulation/BasicMuscle.html
@@ -169,8 +169,10 @@ $(document).ready(function() {
   muscleSystem.addMuscle( {
     xfo: FABRIC.RT.xfo( {
         tr: FABRIC.RT.vec3( 0, 5, 0)
-      })
-    });
+      }),
+    diffuseColor: FABRIC.RT.rgba(0.8, 0.0, 0.0, 1),
+    ambientColor: FABRIC.RT.rgba(0.1, 0.1, 0.1, 1)
+  });
   
   $('#loadingDialog').dialog({
     modal: true
