--- a/Apps/Sample/Rigging/index.html
+++ b/Apps/Sample/Rigging/index.html
@@ -21,14 +21,14 @@
             <h2>RIGGING DEMOS</h2>
             <div class="content">
     <ul>
-      <li class="indexPageLI"><a href=ArmRig.html class="indexPageContent">ArmRig</a></li>
-      <li class="indexPageLI"><a href=FKChain.html class="indexPageContent">FKChain</a></li>
-      <li class="indexPageLI"><a href=FishingRod.html class="indexPageContent">FishingRod</a></li>
-      <li class="indexPageLI"><a href=IK2Bone.html class="indexPageContent">IK2Bone</a></li>
-      <li class="indexPageLI"><a href=LegRig.html class="indexPageContent">LegRig</a></li>
+      <li class="indexPageLI"><a href=ArmRig.html class="indexPageContent">Arm Rig</a></li>
+      <li class="indexPageLI"><a href=FKChain.html class="indexPageContent">FK Chain</a></li>
+      <li class="indexPageLI"><a href=FishingRod.html class="indexPageContent">Fishing Rod</a></li>
+      <li class="indexPageLI"><a href=IK2Bone.html class="indexPageContent">2Bone IK</a></li>
+      <li class="indexPageLI"><a href=LegRig.html class="indexPageContent">Leg Rig</a></li>
       <li class="indexPageLI"><a href=Spine.html class="indexPageContent">Spine</a></li>
-      <li class="indexPageLI"><a href=TwistBones.html class="indexPageContent">TwistBones</a></li>
-      <li class="indexPageLI"><a href='MuscleSimulation/index.html' class="indexPageContent">MuscleSimulation</a></li>
+      <li class="indexPageLI"><a href=TwistBones.html class="indexPageContent">Twist Bones</a></li>
+      <li class="indexPageLI"><a href='MuscleSimulation/index.html' class="indexPageContent">Muscle Simulation</a></li>
     </ul>
     
             </div><!--content-->
