--- a/Apps/Sample/Rigging/MuscleSimulation/BasicArm.html
+++ b/Apps/Sample/Rigging/MuscleSimulation/BasicArm.html
@@ -124,7 +124,7 @@ $(document).ready(function() {
 
   var materialNode = scene.constructNode('PhongSkinningMaterial', {
       lightNode: scene.constructNode('PointLight', { position: FABRIC.RT.vec3(420.0, 1000.0, 600.0) }),
-      diffuseColor: FABRIC.RT.rgba(1.0, 0.0, 0.0, 1.0),
+      diffuseColor: FABRIC.RT.rgba(1.0, 0.75, 0.5, 1.0),
       numBones: rigNode.getSkeletonNode().getNumBones()
     });
   rigInstanceNode.setMaterialNode(materialNode);
@@ -144,11 +144,37 @@ $(document).ready(function() {
   
   muscleSystem.addMuscle( {
     xfo: FABRIC.RT.xfo( {
-        tr: FABRIC.RT.vec3( 0, 5, 0)
+        tr: FABRIC.RT.vec3(13, 70, 0),
+        ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 65)
       }),
+    length: 100,
+    radius: 15,
+    pointEnvelopeIds: FABRIC.RT.vec2(1,1),
+    display: true
+    });
+  /*
+  muscleSystem.addMuscle( {
+    xfo: FABRIC.RT.xfo( {
+        tr: FABRIC.RT.vec3(27, 73, 0),
+        ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 76)
+      }),
+    length: 85,
+    radius: 15,
+    pointEnvelopeIds: FABRIC.RT.vec2(1,1),
     display: true
     });
   
+  muscleSystem.addMuscle( {
+    xfo: FABRIC.RT.xfo( {
+        tr: FABRIC.RT.vec3(-20, 22, 0),
+        ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 45)
+      }),
+    length: 95,
+    radius: 15,
+    pointEnvelopeIds: FABRIC.RT.vec2(1,1),
+    display: true
+    });
+  */
   skin = scene.constructNode('MuscleSkinDeformation', {
       muscleSystem: muscleSystem,
       baseSkinMesh: characterMeshNode
