--- a/Apps/Sample/Rigging/MuscleSimulation/MuscleSkinInteraction.html
+++ b/Apps/Sample/Rigging/MuscleSimulation/MuscleSkinInteraction.html
@@ -133,7 +133,7 @@ $(document).ready(function() {
   var camera = scene.constructNode('TargetCamera', {
       nearDistance: 0.1,
       farDistance: 500,
-      position: FABRIC.RT.vec3(0, 5, 10).scale(1.5),
+      position: FABRIC.RT.vec3(0, 15, 20),
       target: FABRIC.RT.vec3(0, 0, 0)
     });
   
@@ -141,7 +141,7 @@ $(document).ready(function() {
   var cameraManipulator = scene.constructNode("CameraManipulator", { targetNode:camera } );
   
   var light = scene.constructNode('PointLight', { position: FABRIC.RT.vec3(420.0, 1000.0, 600.0) });
-  /*
+  
   // create the scene grid
   scene.constructNode('Instance', {
       geometryNode: scene.constructNode('Grid', {
@@ -149,18 +149,18 @@ $(document).ready(function() {
         size_z: 40.0,
         sections_x: 20,
         sections_z: 20 }),
-      materialNode: scene.constructNode('FlatMaterial', { color: FABRIC.RT.rgb(0.4, 0.4, 0.4) })
+      materialNode: scene.constructNode('FlatMaterial', { color: FABRIC.RT.rgb(0.2, 0.2, 0.2) })
     });
-  */
+  
   // first create a skeleton
   var skeleton = scene.constructNode('CharacterSkeleton');
 
   skeleton.addBone({name: 'anchorLeft', referencePose: FABRIC.RT.xfo({
-      tr: FABRIC.RT.vec3(-6, 0, 0)
+      tr: FABRIC.RT.vec3(-6, 5, 0)
     }) });
   
   skeleton.addBone({name: 'anchorRight', referencePose: FABRIC.RT.xfo({
-      tr: FABRIC.RT.vec3(6, 0, 0)
+      tr: FABRIC.RT.vec3(6, 5, 0)
     }) });
 
   // create the rig
@@ -215,7 +215,7 @@ $(document).ready(function() {
     });
   var transformedMesh = scene.constructNode('TransformedGeometry', {
       baseGeometryNode: plane,
-      xfo: FABRIC.RT.xfo({ tr: FABRIC.RT.vec3(0, -0.5, 0.5) })
+      xfo: FABRIC.RT.xfo({ tr: FABRIC.RT.vec3(0, 5.5, 0) })
     });
       
   //////////////////////////////////////////////////////////////
