--- a/Apps/Sample/Rigging/MuscleSimulation/index.html
+++ b/Apps/Sample/Rigging/MuscleSimulation/index.html
@@ -24,6 +24,7 @@
     <ul>
       <li class="indexPageLI"><a href='BasicMuscle.html' class="indexPageContent">Basic Muscle</a></li>
       <li class="indexPageLI"><a href='MuscleSkinInteraction.html' class="indexPageContent">Muscle Skin Interaction</a></li>
+      <li class="indexPageLI"><a href='BasicArm.html' class="indexPageContent">Basic Arm</a></li>
     </ul>
     
             </div><!--content-->
