--- a/Apps/Sample/Rigging/MuscleSimulation/BasicArm.html
+++ b/Apps/Sample/Rigging/MuscleSimulation/BasicArm.html
@@ -144,36 +144,36 @@ $(document).ready(function() {
   
   muscleSystem.addMuscle( {
     xfo: FABRIC.RT.xfo( {
-        tr: FABRIC.RT.vec3(11, 70, 0),
-        ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 68)
-      }),
+      tr: FABRIC.RT.vec3(11, 70, 0),
+      ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 68)
+    }),
     length: 100,
     radius: 12,
     pointEnvelopeIds: FABRIC.RT.vec2(1,0),
     display: true
-    });
+  });
   
   muscleSystem.addMuscle( {
     xfo: FABRIC.RT.xfo( {
-        tr: FABRIC.RT.vec3(27, 73, 0),
-        ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 76)
-      }),
+      tr: FABRIC.RT.vec3(27, 73, 0),
+      ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 76)
+    }),
     length: 85,
     radius: 12,
     pointEnvelopeIds: FABRIC.RT.vec2(1,0),
     display: true
-    });
+  });
   
   muscleSystem.addMuscle( {
     xfo: FABRIC.RT.xfo( {
-        tr: FABRIC.RT.vec3(-20, 22, 0),
-        ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 45)
-      }),
+      tr: FABRIC.RT.vec3(-20, 22, 3),
+      ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 1, 0), -3).multiply(FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 45))
+    }),
     length: 95,
     radius: 9,
     pointEnvelopeIds: FABRIC.RT.vec2(1,0),
     display: true
-    });
+  });
   
   skin = scene.constructNode('MuscleSkinDeformation', {
       muscleSystem: muscleSystem,
