--- a/Apps/Sample/Alembic/Cube.html
+++ b/Apps/Sample/Alembic/Cube.html
@@ -69,31 +69,31 @@ $(document).ready(function() {
     lightNode: light,
   });
   
-  // create the alembic content, and fire the load once it is loaded
-  var resourceName = 'cube';
-  var assets = scene.importAssetFile('Models/'+resourceName+'.abc', {
-    dependentNode: viewport,
-    onLoadSuccessCallback: function(){
-      
-      // loop over all assets and create an instance
-      for(var name in assets[resourceName].getParsedNodes()) {
-        if(assets[resourceName].getParsedNodes()[name].isTypeOf('Triangles'))
-        {
-          scene.constructNode('Instance', {
-            transformNode: assets[resourceName].getCorrespondingTransform(name),
-            geometryNode: assets[resourceName].getParsedNodes()[name],
-            materialNode: phongMaterial
-          });
-        }
-      }
-      $('#loadingDialog').dialog('close');
-      viewport.redraw();
-    }
-  });
-
   $('#loadingDialog').dialog({
     modal: true
   });
+
+  // create the alembic content, and fire the load once it is loaded
+  var resourceName = 'cube';
+  var assets = scene.importAssetFile('Models/'+resourceName+'.abc', {
+    dependentNode: viewport
+  });
+  assets[resourceName].addOnLoadSuccessCallback(function(){
+    // loop over all assets and create an instance
+    for(var name in assets[resourceName].getParsedNodes()) {
+      if(assets[resourceName].getParsedNodes()[name].isTypeOf('Triangles'))
+      {
+        scene.constructNode('Instance', {
+          transformNode: assets[resourceName].getCorrespondingTransform(name),
+          geometryNode: assets[resourceName].getParsedNodes()[name],
+          materialNode: phongMaterial
+        });
+      }
+    }
+    $('#loadingDialog').dialog('close');
+    viewport.redraw();
+  });
+
   var count = FABRIC.getAsyncTaskCount();
   FABRIC.appendOnResolveAsyncTaskCallback(function(label, countRemaining){
     $('#loadingProgressBar').progressbar({
