--- a/Apps/Sample/Rigging/MuscleSimulation/MuscleSkinInteraction.html
+++ b/Apps/Sample/Rigging/MuscleSimulation/MuscleSkinInteraction.html
@@ -234,7 +234,7 @@ $(document).ready(function() {
   
   skin = scene.constructNode('MuscleSkinDeformation', {
       muscleSystem: muscleSystem,
-      baseSkinMesh: transformedMesh
+      baseMesh: transformedMesh
     });
   
   
