* Fixed regressions. * Fixed Muscle Binding Weight normalization. * Moved skin matrix calculation to separate operator  - big performance boost.

--- a/Apps/Sample/Rigging/MuscleSimulation/BasicMuscle.html
+++ b/Apps/Sample/Rigging/MuscleSimulation/BasicMuscle.html
@@ -168,7 +168,8 @@ $(document).ready(function() {
         tr: FABRIC.RT.vec3( 0, 5, 0)
       }),
     diffuseColor: FABRIC.RT.rgba(0.8, 0.0, 0.0, 1),
-    ambientColor: FABRIC.RT.rgba(0.1, 0.1, 0.1, 1)
+    ambientColor: FABRIC.RT.rgba(0.1, 0.1, 0.1, 1),
+    display: true
   });
   
   $('#loadingDialog').dialog({
