--- a/Apps/Sample/Rigging/MuscleSimulation/BasicArm.html
+++ b/Apps/Sample/Rigging/MuscleSimulation/BasicArm.html
@@ -163,6 +163,7 @@ $(document).ready(function() {
   });
   
   muscleSystem.addMuscle( {
+    diffuseColor: FABRIC.RT.rgba(0.0, 0.0, 0.8, 1.0),
     xfo: FABRIC.RT.xfo( {
       tr: FABRIC.RT.vec3(27, 73, 0),
       ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 76)
@@ -174,6 +175,7 @@ $(document).ready(function() {
   });
   
   muscleSystem.addMuscle( {
+    diffuseColor: FABRIC.RT.rgba(0.4, 0.0, 0.4, 1.0),
     xfo: FABRIC.RT.xfo( {
       tr: FABRIC.RT.vec3(-20, 22, 3),
       ori: FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 1, 0), -3).multiply(FABRIC.RT.Quat.makeFromAxisAndAngle(FABRIC.RT.vec3(0, 0, 1), 45))
